--- a/index.html
+++ b/index.html
@@ -35,16 +35,24 @@
     <section class="about">
         <div class="usd-brl-proof-bg">
             <div class="container">
-                <h2>What Is The USD/BRL OTC Bug?</h2>
+                <h2>What Is The Pocket Option Signal Software ?</h2>
                 <div class="dual-language">
                     <div class="english">
                         <h3></h3>
-                        <p>Our exclusive USD/BRL OTC Bug is a rare market inefficiency that allows our members to generate consistent profits daily. Unlike regular trading strategies that work sometimes, our bug exploits a permanent flaw in the OTC market structure that big institutions don't want you to know about.</p>
-                        <p>Our members are consistently making 5-15% daily returns using this simple yet powerful strategy that works even in the most volatile markets.</p>
+                        <p>Pocket Option official signals 💥
+Straight from their software – no copy, no delay.
+🚀 Join us for accurate & trusted trades!
+
+</p>
                     </div>
                     <div class="hinglish">
                         <h3></h3>
-                        <p>Hamara exclusive USD/BRL OTC Bug ek rare market inefficiency hai jo hamare members ko daily consistent profits generate karne deta hai. Regular trading strategies ki tarah nahi jo kabhi kabhi work karti hai, hamara bug OTC market structure mein permanent flaw ko exploit karta hai jiske bare mein bade institutions aapko batana nahi chahte.</p>
+                        <p>Pocket Option ke Official Signals
+Hamari team directly Pocket Option se linked hai.
+Mujhe signals unke official software se milte hain, bina kisi delay ke – real-time aur accurate.
+
+Agar aap bhi wahi signals chahte ho jo pro traders use karte hain, to abhi join karo.
+🔒 Trusted | 📈 Verified | 💸 Profitable</p>
                         <p>Hamare members consistently 5-15% daily returns bana rahe hain is simple lekin powerful strategy se jo most volatile markets mein bhi kaam karti hai.</p>
                     </div>
                 </div>
@@ -107,8 +115,13 @@
         <div class="container">
             <h2>Frequently Asked Questions</h2>
             <div class="faq-item">
-                <h3>What exactly is the USD/BRL OTC Bug?</h3>
-                <p>The USD/BRL OTC Bug is a proprietary trading strategy that exploits a specific inefficiency in the Over-The-Counter Brazilian Real market. Due to certain technical constraints in the market structure, there is a predictable pattern that allows for consistent profit generation. We cannot disclose the exact details publicly, but all information is shared with group members.</p>
+                <h3>What exactly is the Pocket option Official Signal?</h3>
+                <p>We are directly connected with Pocket Option — our team is authorized and backed by them.
+I receive real-time signals directly from Pocket Option's official software, ensuring high accuracy and fast execution.
+
+Join us and get exclusive access to the same signals used by top traders on the platform.
+💼 Trusted. Verified. Profitable.
+🔒 100% legit – not third-party, not copied – official signals only.</p>
             </div>
             <div class="faq-item">
                 <h3>How much can I realistically earn?</h3>
@@ -149,7 +162,7 @@
 
     <footer>
         <div class="container">
-            <p>© 2023 Trader Success Stories. All Rights Reserved.</p>
+            <p>© 2025 Trader Success. All Rights Reserved.</p>
             <p class="disclaimer">Trading involves risk. Past performance is not indicative of future results.</p>
         </div>
     </footer>
