--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ Agar aap bhi wahi signals chahte ho jo pro traders use karte hain, to abhi join 
                 </div>
                 <div class="testimonial">
                     <div class="profit">+₹25,000 daily average</div>
-                    <p>"The USD/BRL OTC Bug works exactly as described. I'm averaging ₹25,000 daily profits for the last month. This group is the real deal!"</p>
+                    <p>"The Software works exactly as described. I'm averaging ₹25,000 daily profits for the last month. This Channel is the real deal!"</p>
                     <div class="name">- Vikram K.</div>
                 </div>
             </div>
@@ -90,7 +90,7 @@ Agar aap bhi wahi signals chahte ho jo pro traders use karte hain, to abhi join 
                 <div class="feature">
                     <i class="fas fa-lock"></i>
                     <h3>Exclusive Access</h3>
-                    <p>Our USD/BRL OTC Bug strategy is only available to group members and won't be shared publicly.</p>
+                    <p>Our Software and Pocket Option Free Of Cost To Access</p>
                 </div>
                 <div class="feature">
                     <i class="fas fa-graduation-cap"></i>
