--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@ Agar aap bhi wahi signals chahte ho jo pro traders use karte hain, to abhi join 
             <div class="testimonial-grid">
                 <div class="testimonial">
                     <div class="profit">+₹45,000 in 24 hours</div>
-                    <p>"I was skeptical at first, but after joining the group, I made my first ₹45,000 in just 24 hours using the USD/BRL OTC Bug strategy. Life changing!"</p>
+                    <p>"I was skeptical at first, but after joining the group, I made my first ₹45,000 in just 24 hours using the signal from trader success. Life changing!"</p>
                     <div class="name">- Rahul S.</div>
                 </div>
                 <div class="testimonial">
                     <div class="profit">+₹1.2 Lakhs in one week</div>
-                    <p>"Been trading for years with mixed results. This OTC Bug strategy is something else entirely. Made ₹1.2 Lakhs in my first week. Now I can finally quit my day job."</p>
+                    <p>"Been trading for years with mixed results. This channel is something else entirely. Made ₹1.2 Lakhs in my first week. Now I can finally quit my day job."</p>
                     <div class="name">- Priya M.</div>
                 </div>
                 <div class="testimonial">
