--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <!-- Video Background -->
     <video id="bgVideo" class="video-background" autoplay muted loop preload="auto" playsinline>
-        <source src="video_I6W4mp5O.mp4" type="video/mp4">
+        <source src="video.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 
