--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ src="https://www.facebook.com/tr?id=755623087154193&ev=PageView&noscript=1"
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trader Success - Binary Trading</title>
+    <title>Avaitor Tool </title>
     <!-- Tailwind CSS CDN for styling -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -71,27 +71,25 @@ src="https://www.facebook.com/tr?id=755623087154193&ev=PageView&noscript=1"
 
         <!-- Title -->
         <h1 class="text-3xl md:text-4xl font-extrabold text-white mb-2 tracking-wide drop-shadow-2xl no-wrap-heading">
-           Trader Success 📊
+           Aviator Tool 📊
         </h1>
 
         <!-- Divider -->
         <div class="w-24 h-1 bg-gradient-to-r from-blue-400 to-cyan-400 rounded-md mb-6 animate-pulse"></div>
 
         <!-- Join Telegram Button -->
-        <a href="https://t.me/+ivVmOeKGtKowNWNl" class="join-button bg-gradient-to-r from-blue-500 to-cyan-500 text-white font-bold py-4 px-8 rounded-full text-lg shadow-lg hover:shadow-xl transition-transform transform hover:-translate-y-1 uppercase tracking-wider animate-blink" id="joinButtonTop">
+        <a href="https://t.me/+-YVuudiFwM41MTRl" class="join-button bg-gradient-to-r from-blue-500 to-cyan-500 text-white font-bold py-4 px-8 rounded-full text-lg shadow-lg hover:shadow-xl transition-transform transform hover:-translate-y-1 uppercase tracking-wider animate-blink" id="joinButtonTop">
             📈 Join Telegram Channel
         </a>
 
         <!-- Updated Content Section -->
         <div class="max-w-xl my-4 text-white">
             <h3 class="text-2xl font-bold mb-2 text-blue-300 drop-shadow-lg">
-                1. NON MTG <br>
-                2. POCKET OPTION OFFICIAL SIGNAL SOFTWARE <br>
-                3. 24/7 Expert Guidance & Real Market Insights
+                1. Powerfull <br>
+                2. Limited  <br>
+                3. 24/7 Expert Guidance 
             </h3>
             <p class="text-base text-gray-200 leading-relaxed drop-shadow-md">
-                We provide accurate trade setups, advanced strategies, and real-time updates to help you grow consistently. 
-                Be part of a winning traders’ community and gain the edge you need in binary options trading.
             </p>
         </div>
 
@@ -109,7 +107,7 @@ src="https://www.facebook.com/tr?id=755623087154193&ev=PageView&noscript=1"
         </div>
 
         <!-- Final Call to Action button -->
-        <a href="https://t.me/+ivVmOeKGtKowNWNl" class="join-button bg-gradient-to-r from-blue-500 to-cyan-500 text-white font-bold py-4 px-8 rounded-full text-lg shadow-lg hover:shadow-xl transition-transform transform hover:-translate-y-1 uppercase tracking-wider" id="joinButtonBottom">
+        <a href="https://t.me/+-YVuudiFwM41MTRl" class="join-button bg-gradient-to-r from-blue-500 to-cyan-500 text-white font-bold py-4 px-8 rounded-full text-lg shadow-lg hover:shadow-xl transition-transform transform hover:-translate-y-1 uppercase tracking-wider" id="joinButtonBottom">
             🚀 Join Telegram Now!
         </a>
     </div>
