--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ src="https://www.facebook.com/tr?id=755623087154193&ev=PageView&noscript=1"
     <div class="relative z-10 min-h-screen flex flex-col items-center justify-center p-5 text-center content-container">
 
         <!-- Logo -->
-        <img src="logo.png" alt="Trader Success Logo" class="w-32 h-32 rounded-full mb-4 shadow-lg ring-4 ring-blue-500 transform transition-transform duration-300 hover:scale-105" onerror="this.src='https://placehold.co/128x128/00d4ff/000?text=Logo'"> 
+        <img src="logo.png.jpg" alt="Trader Success Logo" class="w-32 h-32 rounded-full mb-4 shadow-lg ring-4 ring-blue-500 transform transition-transform duration-300 hover:scale-105" onerror="this.src='https://placehold.co/128x128/00d4ff/000?text=Logo'"> 
 
         <!-- Title -->
         <h1 class="text-3xl md:text-4xl font-extrabold text-white mb-2 tracking-wide drop-shadow-2xl no-wrap-heading">
