--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Updated Title for Educational Focus -->
-    <title>LUCKY TRADING - Free Trading Education</title>
+    <title>LUCKY - Free Education</title>
     <!-- Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -87,7 +87,7 @@
             
             <!-- Updated Key Message 1: Focus on Education/Insight -->
             <p class="text-lg text-gray-700 mb-2 font-semibold">
-                Access Daily Market Analysis & Educational Insights
+                Access Daily Educational Insights
             </p>
             
             <!-- Key Message 2: Brand Name -->
