Update brand name in index.html

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <!-- Key Message 2: Brand Name -->
             <h1 class="text-3xl font-extrabold text-gray-900 mb-6">
                 <!-- Border color changed to green -->
-                <span class="border-b-4 border-green-500">LUCKY TRADING</span>
+                <span class="border-b-4 border-green-500">LUCKY </span>
             </h1>
             
             <!-- Primary CTA Button (Link retained, no auto-click) -->
