--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             
             <!-- Updated Key Message 1: Focus on Education/Insight -->
             <p class="text-lg text-gray-700 mb-2 font-semibold">
-                Access Daily Market Analysis & Educational Insights
+                Access Daily Analysis & Educational Insights
             </p>
             
             <!-- Key Message 2: Brand Name -->
