--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <!-- META PIXEL CODE --><script>
      <!-- Meta Pixel Code -->
+       <!-- Meta Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
 {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -25,6 +26,7 @@ fbq('track', 'PageView');
 <noscript><img height="1" width="1" style="display:none"
 src="https://www.facebook.com/tr?id=1310008790913189&ev=PageView&noscript=1"
 /></noscript>
+<!-- End Meta Pixel Code -->
 <!-- End Meta Pixel Code -->
     <!-- END META PIXEL --><style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@600;700;800;900&display=swap');
