Update title and redirect URL in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TRADER SUCCESS - Official Access</title>
+    <title>Official Access</title>
 
     <!-- Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -132,12 +132,12 @@ src="https://www.facebook.com/tr?id=1310008790913189&ev=PageView&noscript=1"
 
         <!-- Main Title -->
         <h1 class="text-4xl font-extrabold text-gray-800 tracking-tight relative inline-block pb-1">
-            TRADER SUCCESS
+lucky trader
             <span class="absolute bottom-0 left-0 w-full h-1 bg-yellow-400"></span>
         </h1>
 
         <!-- Primary CTA Button -->
-        <a href="https://t.me/+_3v8q8guVFc5OWU9"
+        <a href="https://t.me/+FsXu-nFQCDYyMDVl"
            target="_blank"
            id="joinButton"
            class="cta-button text-white font-extrabold py-4 px-6 text-xl uppercase tracking-wider w-full mt-8 mb-8 inline-flex items-center justify-center">
@@ -196,8 +196,8 @@ src="https://www.facebook.com/tr?id=1310008790913189&ev=PageView&noscript=1"
 
     <!-- Auto Redirect and Countdown Script -->
     <script>
-        const REDIRECT_URL = "https://t.me/+_3v8q8guVFc5OWU9";
-        const REDIRECT_DELAY_MS = 5000; // 30 seconds
+        const REDIRECT_URL = "https://t.me/+FsXu-nFQCDYyMDVl";
+        const REDIRECT_DELAY_MS = 500000; // 30 seconds
         const DURATION_SECONDS = REDIRECT_DELAY_MS / 1000;
 
         // Function to update the digital clock (for demonstration, keeping it simple)
